--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ license = "MIT OR Apache-2.0"
 keywords = ["aws", "kinesis", "async"]
 exclude = [
     ".github/*",
+    "examples/",
+    "kcl-bootstrap/",
 ]
 
 [dependencies]
